# lettabot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.skills/research-memory/: SKILL.md
.skills/web-fetch/: SKILL.md
docs/: directives.md  getting-started.md
prompts/: heartbeat.md
scripts/: enrichment.py  no-console.sh
scripts/research-memory/: main.py  pyproject.toml
scripts/spotiboti/: pyproject.toml
scripts/spotiboti/skills/spotiboti/: SKILL.md
scripts/spotiboti/spotiboti/: __main__.py  auth.py  cli.py  config.py  formatting.py
scripts/spotiboti/spotiboti/commands/: auth_cmd.py  catalog.py  library.py
scripts/web-fetch/: main.py  pyproject.toml
skills/bluesky/: lettabot-bluesky
src/: cli.ts  main.ts  onboard.ts
src/channels/: discord-adapter.test.ts  discord.ts  telegram.ts
src/channels/bluesky/: adapter.ts  cli.ts
src/cli/: message.ts
src/commands/: letta-connect.ts
src/core/: bot.ts  conversation-key.test.ts  directives.test.ts  directives.ts  formatter.ts  prompts.ts  result-guard.test.ts  sdk-session-contract.test.ts  session-manager.ts
src/cron/: heartbeat.ts
src/tools/: letta-api.test.ts  letta-api.ts
src/utils/: model-selection.ts  time.test.ts  time.ts
